WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39763
[Qt] SharedTimerQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39763
Summary
[Qt] SharedTimerQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:27:32 PDT
WebCore/platform/qt/SharedTimerQt.cpp:33: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/platform/qt/SharedTimerQt.cpp:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 1 files
Attachments
Patch that fixes the coding style issues
(1.32 KB, patch)
2010-05-26 14:35 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.38 KB, patch)
2010-06-04 18:43 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:35:04 PDT
Created
attachment 57143
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:42:45 PDT
QtTriaged
David Levin
Comment 3
2010-05-27 11:20:20 PDT
Comment on
attachment 57143
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 18:43:22 PDT
Created
attachment 57938
[details]
Patch
Eric Seidel (no email)
Comment 5
2010-06-04 22:00:57 PDT
Comment on
attachment 57938
[details]
Patch LGTM.
WebKit Commit Bot
Comment 6
2010-06-04 22:51:40 PDT
Comment on
attachment 57938
[details]
Patch Clearing flags on attachment: 57938 Committed
r60736
: <
http://trac.webkit.org/changeset/60736
>
WebKit Commit Bot
Comment 7
2010-06-04 22:51:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug