2010-06-04  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] SharedTimerQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39763

        * platform/qt/SharedTimerQt.cpp:

Canonical link: https://commits.webkit.org/51759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60736 268f45cc-cd09-0410-ab3c-d52691b4dbfc